--- a/overrides/partials/integrations/analytics/umami.html
+++ b/overrides/partials/integrations/analytics/umami.html
@@ -1,1 +1,2 @@
 <script async defer data-website-id="eebbe9e8-bd03-414a-8d0c-fecb3347fcfc" src="https://analytics.gnps2.org/umami.js"></script>
+<script async defer data-website-id="74bc9983-13c4-4da0-89ae-b78209c13aaf" src="https://analytics.gnps2.org/umami.js"></script>
